Fix horizontal overflow when content doesn't fit
The CSS setup relied on viewport width (vw) for some calculations,
however vw would not take into account scroll bars should they appear.
As a result, the site would overflow horizontally when the main content
wouldn't fit in the screen because a vertical scroll bar would appear.

This commit fixes this issue removing the use of vw in some crucial
components.

--- a/src/components/Container.scss
+++ b/src/components/Container.scss
@@ -7,11 +7,9 @@
 
 .container {
   margin: 0 auto;
-  width: calc(100vw - 24px);
   padding: 0 12px;
 
   @media (min-width: 769px) {
-    width: calc(100vw - 48px);
     padding: 0 24px;
   }
 
