--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -8,7 +8,6 @@
 @import "../style/colors.scss";
 
 footer {
-  width: 100vw;
   padding: 24px 0;
 
   p {
