--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -8,7 +8,6 @@
 @import "../style/colors.scss";
 
 header {
-  width: 100vw;
   background-color: $color-accent;
   color: $color-text-secondary;
 
